[gd_scene load_steps=44 format=2]

[ext_resource path="res://scenes/mort.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://building1.gd" type="Script" id=3]
[ext_resource path="res://building2.gd" type="Script" id=4]
[ext_resource path="res://building3.gd" type="Script" id=5]
[ext_resource path="res://building4.gd" type="Script" id=6]
[ext_resource path="res://building5.gd" type="Script" id=7]
[ext_resource path="res://deleteBuilding.gd" type="Script" id=8]
[ext_resource path="res://assets/Zilla_Slab/ZillaSlab-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/teeerst.png" type="Texture" id=10]
[ext_resource path="res://assets/builtCards/dungeon.png" type="Texture" id=11]
[ext_resource path="res://assets/builtCards/temple.png" type="Texture" id=12]
[ext_resource path="res://assets/builtCards/concert.png" type="Texture" id=13]
[ext_resource path="res://assets/builtCards/oasis.png" type="Texture" id=14]
[ext_resource path="res://switchBackButton.gd" type="Script" id=15]
[ext_resource path="res://switchButton.gd" type="Script" id=16]
[ext_resource path="res://assets/texture-for-platformers-pixel-art-ground-vector-6026280.jpeg" type="Texture" id=17]
[ext_resource path="res://assets/Tile.png" type="Texture" id=18]
[ext_resource path="res://assets/magicTiles.tres" type="TileSet" id=19]
[ext_resource path="res://mapOnTop.gd" type="Script" id=20]
[ext_resource path="res://assets/postApoTiles.tres" type="TileSet" id=21]
[ext_resource path="res://assets/levelBar.png" type="Texture" id=22]
[ext_resource path="res://assets/levelBarYellow.png" type="Texture" id=23]
[ext_resource path="res://Triangle.gd" type="Script" id=24]
[ext_resource path="res://assets/Zilla_Slab/ZillaSlab-Bold.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://faithScore.gd" type="Script" id=26]
[ext_resource path="res://assets/levelBarRed.png" type="Texture" id=27]
[ext_resource path="res://popScore.gd" type="Script" id=28]
[ext_resource path="res://assets/levelBarBlue.png" type="Texture" id=29]
[ext_resource path="res://hapScore.gd" type="Script" id=30]
[ext_resource path="res://assets/build.ogg" type="AudioStream" id=31]
[ext_resource path="res://assets/destroy.ogg" type="AudioStream" id=32]
[ext_resource path="res://assets/postapoSound.ogg" type="AudioStream" id=33]
[ext_resource path="res://assets/fantasySound.ogg" type="AudioStream" id=34]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_mort_confirmed():
	get_tree().change_scene(\"res://scenes/lose.tscn\")
"

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.223529, 0.152941, 0.560784, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.427451, 0.392157, 0.596078, 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="TileSet" id=7]
0/name = "texture-for-platformers-pixel-art-ground-vector-6026280.jpeg 0"
0/texture = ExtResource( 17 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 385, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "texture-for-platformers-pixel-art-ground-vector-6026280.jpeg 1"
1/texture = ExtResource( 17 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 319, 255, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "texture-for-platformers-pixel-art-ground-vector-6026280.jpeg 2"
2/texture = ExtResource( 17 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 255, 255, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "texture-for-platformers-pixel-art-ground-vector-6026280.jpeg 3"
3/texture = ExtResource( 17 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 831, 767, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "texture-for-platformers-pixel-art-ground-vector-6026280.jpeg 4"
4/texture = ExtResource( 17 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 511, 703, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Tile.png 5"
5/texture = ExtResource( 18 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( -1, -1, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0

[sub_resource type="Theme" id=8]

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 9 )

[node name="World" type="Node2D"]
script = SubResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 630.137 ]
}

[node name="mort" type="AcceptDialog" parent="."]
margin_left = 550.0
margin_top = 360.0
margin_right = 711.0
margin_bottom = 460.0
rect_min_size = Vector2( 100, 100 )
window_title = "Game Over"
dialog_text = "Text"
script = ExtResource( 1 )

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 990.0
margin_top = 130.0
margin_right = 1257.0
margin_bottom = 554.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8
script = ExtResource( 2 )

[node name="building1" type="Button" parent="UI"]
editor/display_folded = true
margin_right = 267.0
margin_bottom = 64.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Shrine (+2 Faith / -1 Population)"
clip_text = true
script = ExtResource( 3 )

[node name="building2" type="Button" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 72.0
margin_right = 267.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Mansion (+3 Population / -2 Happiness)"
script = ExtResource( 4 )

[node name="building3" type="Button" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 72.0
margin_right = 267.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Garden (+4 Happiness / -6 Faith)"
script = ExtResource( 5 )

[node name="building4" type="Button" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 72.0
margin_right = 267.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "School (+5 Faith / -4 Population)"
script = ExtResource( 6 )

[node name="building5" type="Button" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 72.0
margin_right = 267.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Stadium (+15 Population / -14 Happiness)"
script = ExtResource( 7 )

[node name="deleteBuilding" type="Button" parent="UI"]
editor/display_folded = true
margin_top = 72.0
margin_right = 267.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 64 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Delete Building"
script = ExtResource( 8 )

[node name="UIalter" type="VBoxContainer" parent="."]
visible = false
margin_left = 990.0
margin_top = 130.0
margin_right = 1257.0
margin_bottom = 554.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="Label" type="Label" parent="UIalter"]
margin_right = 267.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 11 )
text = "Built last turn :"

[node name="tentButton1" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 48.0
margin_right = 267.0
margin_bottom = 126.0
texture_normal = ExtResource( 10 )

[node name="tentButton2" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 134.0
margin_right = 267.0
margin_bottom = 212.0
texture_normal = ExtResource( 10 )

[node name="tentButton3" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 220.0
margin_right = 267.0
margin_bottom = 298.0
texture_normal = ExtResource( 10 )

[node name="dungeonButton1" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 134.0
margin_right = 267.0
margin_bottom = 212.0
texture_normal = ExtResource( 11 )

[node name="dungeonButton2" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 134.0
margin_right = 267.0
margin_bottom = 212.0
texture_normal = ExtResource( 11 )

[node name="dungeonButton3" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 134.0
margin_right = 267.0
margin_bottom = 212.0
texture_normal = ExtResource( 11 )

[node name="templeButton1" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 134.0
margin_right = 267.0
margin_bottom = 212.0
texture_normal = ExtResource( 12 )

[node name="templeButton2" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 48.0
margin_right = 267.0
margin_bottom = 126.0
texture_normal = ExtResource( 12 )

[node name="templeButton3" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 220.0
margin_right = 267.0
margin_bottom = 298.0
texture_normal = ExtResource( 12 )

[node name="concertButton1" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 220.0
margin_right = 267.0
margin_bottom = 298.0
texture_normal = ExtResource( 13 )

[node name="concertButton2" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 48.0
margin_right = 267.0
margin_bottom = 126.0
texture_normal = ExtResource( 13 )

[node name="concertButton3" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 306.0
margin_right = 267.0
margin_bottom = 384.0
texture_normal = ExtResource( 13 )

[node name="oasisButton1" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 306.0
margin_right = 267.0
margin_bottom = 384.0
texture_normal = ExtResource( 14 )

[node name="oasisButton2" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 306.0
margin_right = 267.0
margin_bottom = 384.0
texture_normal = ExtResource( 14 )

[node name="oasisButton3" type="TextureButton" parent="UIalter"]
visible = false
margin_top = 306.0
margin_right = 267.0
margin_bottom = 384.0
texture_normal = ExtResource( 14 )

[node name="switchBackButton" type="Button" parent="."]
margin_left = 1067.31
margin_top = 616.04
margin_right = 1247.31
margin_bottom = 680.04
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
text = "Next exercise"
script = ExtResource( 15 )

[node name="switchButton" type="Button" parent="."]
margin_left = 1067.31
margin_top = 616.04
margin_right = 1247.31
margin_bottom = 680.04
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
disabled = true
text = "Divine Switch"
script = ExtResource( 16 )

[node name="mapOnBottom" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = SubResource( 7 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0 )

[node name="mapOnTop" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = ExtResource( 19 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
script = ExtResource( 20 )

[node name="mapOnTopAlter" type="TileMap" parent="."]
visible = false
position = Vector2( -1, 0 )
tile_set = ExtResource( 21 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1

[node name="counterTurn" type="Control" parent="."]

[node name="counter1" type="ColorRect" parent="counterTurn"]
margin_left = 1067.0
margin_top = 38.0
margin_right = 1117.0
margin_bottom = 88.0
rect_rotation = 45.0
theme = SubResource( 8 )

[node name="inside" type="ColorRect" parent="counterTurn/counter1"]
visible = false
margin_left = 2.5
margin_top = 2.5
margin_right = 47.5
margin_bottom = 47.5
color = Color( 0.223529, 0.152941, 0.560784, 1 )

[node name="counter2" type="ColorRect" parent="counterTurn"]
margin_left = 1147.0
margin_top = 37.6949
margin_right = 1197.0
margin_bottom = 87.6949
rect_rotation = 45.0
theme = SubResource( 8 )

[node name="inside" type="ColorRect" parent="counterTurn/counter2"]
visible = false
margin_left = 2.5
margin_top = 2.5
margin_right = 47.5
margin_bottom = 47.5
color = Color( 0.223529, 0.152941, 0.560784, 1 )

[node name="counter3" type="ColorRect" parent="counterTurn"]
margin_left = 1227.0
margin_top = 37.695
margin_right = 1277.0
margin_bottom = 87.695
rect_rotation = 45.0
theme = SubResource( 8 )

[node name="inside" type="ColorRect" parent="counterTurn/counter3"]
visible = false
margin_left = 2.5
margin_top = 2.5
margin_right = 47.5
margin_bottom = 47.5
color = Color( 0.223529, 0.152941, 0.560784, 1 )

[node name="counterScore" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="faithTriangle" type="TextureProgress" parent="counterScore"]
margin_left = 184.398
margin_top = 438.505
margin_right = 323.398
margin_bottom = 559.505
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 23 )
fill_mode = 3
tint_over = Color( 0.788235, 0.662745, 0.321569, 1 )
script = ExtResource( 24 )

[node name="faithLabel" type="Label" parent="counterScore"]
margin_left = 82.627
margin_top = 287.929
margin_right = 136.627
margin_bottom = 317.929
custom_fonts/font = SubResource( 9 )
text = "Faith"

[node name="faithScore" type="Label" parent="counterScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.0935
margin_top = 305.291
margin_right = 121.094
margin_bottom = 366.291
custom_fonts/font = SubResource( 10 )
text = "5"
align = 1
valign = 1
script = ExtResource( 26 )

[node name="popTriangle" type="TextureProgress" parent="counterScore"]
margin_left = 323.534
margin_top = 439.26
margin_right = 462.534
margin_bottom = 560.26
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 27 )
fill_mode = 3
tint_over = Color( 0.780392, 0.301961, 0.352941, 1 )
script = ExtResource( 24 )

[node name="popLabel" type="Label" parent="counterScore"]
margin_left = 201.62
margin_top = 288.339
margin_right = 313.62
margin_bottom = 318.339
custom_fonts/font = SubResource( 9 )
text = "Population"

[node name="popScore" type="Label" parent="counterScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 208.888
margin_top = 304.598
margin_right = 263.888
margin_bottom = 365.598
custom_fonts/font = SubResource( 10 )
text = "7"
align = 1
valign = 1
script = ExtResource( 28 )

[node name="hapTriangle" type="TextureProgress" parent="counterScore"]
margin_left = 253.803
margin_top = 558.92
margin_right = 392.803
margin_bottom = 679.92
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 29 )
fill_mode = 3
tint_over = Color( 0.380392, 0.454902, 0.666667, 1 )
script = ExtResource( 24 )

[node name="hapLabel" type="Label" parent="counterScore"]
margin_left = 129.509
margin_top = 559.637
margin_right = 241.509
margin_bottom = 589.637
custom_fonts/font = SubResource( 9 )
text = "Happiness"

[node name="hapScore" type="Label" parent="counterScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 137.772
margin_top = 432.45
margin_right = 192.772
margin_bottom = 493.45
custom_fonts/font = SubResource( 10 )
text = "7"
align = 1
valign = 1
script = ExtResource( 30 )

[node name="counterScoreAlter" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="faithTriangle" type="TextureProgress" parent="counterScoreAlter"]
margin_left = 184.398
margin_top = 438.505
margin_right = 323.398
margin_bottom = 559.505
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 29 )
fill_mode = 3
tint_over = Color( 0.788235, 0.662745, 0.321569, 1 )
script = ExtResource( 24 )

[node name="faithLabel" type="Label" parent="counterScoreAlter"]
margin_left = 82.627
margin_top = 287.929
margin_right = 136.627
margin_bottom = 317.929
custom_fonts/font = SubResource( 9 )
text = "Faith"

[node name="faithScore" type="Label" parent="counterScoreAlter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.0935
margin_top = 305.291
margin_right = 121.094
margin_bottom = 366.291
custom_fonts/font = SubResource( 10 )
text = "5"
align = 1
valign = 1
script = ExtResource( 26 )

[node name="popTriangle" type="TextureProgress" parent="counterScoreAlter"]
margin_left = 323.534
margin_top = 439.26
margin_right = 462.534
margin_bottom = 560.26
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 23 )
fill_mode = 3
tint_over = Color( 0.780392, 0.301961, 0.352941, 1 )
script = ExtResource( 24 )

[node name="popLabel" type="Label" parent="counterScoreAlter"]
margin_left = 201.62
margin_top = 286.946
margin_right = 313.62
margin_bottom = 316.946
custom_fonts/font = SubResource( 9 )
text = "Population"

[node name="popScore" type="Label" parent="counterScoreAlter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 208.888
margin_top = 304.598
margin_right = 263.888
margin_bottom = 365.598
custom_fonts/font = SubResource( 10 )
text = "7"
align = 1
valign = 1
script = ExtResource( 28 )

[node name="hapTriangle" type="TextureProgress" parent="counterScoreAlter"]
margin_left = 253.803
margin_top = 558.92
margin_right = 392.803
margin_bottom = 679.92
rect_rotation = 180.0
texture_under = ExtResource( 22 )
texture_progress = ExtResource( 27 )
fill_mode = 3
tint_over = Color( 0.380392, 0.454902, 0.666667, 1 )
script = ExtResource( 24 )

[node name="hapLabel" type="Label" parent="counterScoreAlter"]
margin_left = 129.509
margin_top = 559.637
margin_right = 241.509
margin_bottom = 589.637
custom_fonts/font = SubResource( 9 )
text = "Happiness"

[node name="hapScore" type="Label" parent="counterScoreAlter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 137.772
margin_top = 432.45
margin_right = 192.772
margin_bottom = 493.45
custom_fonts/font = SubResource( 10 )
text = "7"
align = 1
valign = 1
script = ExtResource( 30 )

[node name="Label" type="Label" parent="."]
margin_left = 253.0
margin_top = 612.0
margin_right = 1006.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 12 )
text = "Exercice 1 : Build 6 tents"
align = 1
valign = 1

[node name="gameState" type="Node2D" parent="."]

[node name="buildSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )

[node name="destroySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )

[node name="postapoSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
volume_db = -15.0

[node name="fantasySong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
[connection signal="confirmed" from="mort" to="mort" method="_on_mort_confirmed"]
[connection signal="confirmed" from="mort" to="." method="_on_mort_confirmed"]
[connection signal="pressed" from="UI/building1" to="UI/building1" method="_on_Building_1_pressed"]
